devops/k8s/ingress/eureka-server-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: eureka-server
  namespace: test
spec:
  rules:
    - host: eureka-server.kinnylee.com
      http:
        paths:
          - path: /
            backend:
              serviceName: eureka-server
              servicePort: 80
