devops/k8s/ingress/user-service.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: user-service
  namespace: test
spec:
  rules:
    - host: user-service.kinnylee.com
      http:
        paths:
          - backend:
              serviceName: user-service
              servicePort: 80
